garde/tests/rules/snapshots/rules__rules__i18n__default_i18n_messages-17.snap
---
source: garde/tests/./rules/i18n.rs
expression: default.alphanumeric_invalid()
---
not alphanumeric
