garde/tests/rules/snapshots/rules__rules__i18n__default_i18n_messages-2.snap
---
source: garde/tests/./rules/i18n.rs
expression: default.length_greater_than(10)
---
length is greater than 10
