garde/tests/rules/snapshots/rules__rules__i18n__default_i18n_messages-3.snap
---
source: garde/tests/./rules/i18n.rs
expression: "default.range_lower_than(\"0\")"
---
lower than 0
