garde/tests/rules/snapshots/rules__rules__i18n__default_i18n_messages-4.snap
---
source: garde/tests/./rules/i18n.rs
expression: "default.range_greater_than(\"100\")"
---
greater than 100
