garde/tests/rules/snapshots/rules__rules__i18n__default_i18n_messages-5.snap
---
source: garde/tests/./rules/i18n.rs
expression: "default.credit_card_invalid(InvalidCreditCard::InvalidLuhn)"
---
not a valid credit card number: invalid luhn
