garde/tests/rules/snapshots/rules__rules__i18n__default_i18n_messages-6.snap
---
source: garde/tests/./rules/i18n.rs
expression: "default.pattern_no_match(\"\\\\d+\")"
---
does not match pattern /\d+/
