garde/tests/rules/snapshots/rules__rules__i18n__default_i18n_messages-7.snap
---
source: garde/tests/./rules/i18n.rs
expression: "default.contains_missing(\"test\")"
---
does not contain "test"
