garde/tests/rules/snapshots/rules__rules__i18n__default_i18n_messages-8.snap
---
source: garde/tests/./rules/i18n.rs
expression: "default.url_invalid(InvalidUrl::EmptyHost)"
---
not a valid url: empty host
