garde/tests/rules/snapshots/rules__rules__i18n__default_i18n_messages-9.snap
---
source: garde/tests/./rules/i18n.rs
expression: "default.prefix_missing(\"http://\")"
---
value does not begin with "http://"
