garde/tests/rules/snapshots/rules__rules__i18n__default_i18n_messages.snap
---
source: garde/tests/./rules/i18n.rs
expression: default.length_lower_than(5)
---
length is lower than 5
